--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'sonar_cloud_demo'
-    organization: 'demosonarcloudgithub'
+    organization: 'Ragnarok540'
     scannerMode: 'Other'
 
 - task: Maven@3
